--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <a href="index.html">Home</a>
       <a href="anxiety.html">Anxiety</a>
       <a href="depression.html">Depression</a>
-      <a href="stress.html">Stress</a>
-      <a href="burnout.html">Burnout</a>
-      <a href="sleep.html">Sleep Health</a>
+      <a href="bipolar.html">Bipolar</a>
+      <a href="ptsd.html">PTSD</a>
+      <a href="ocd.html">OCD</a>
     </nav>
   </header>
   <div class="container">
