--- a/ptsd.html
+++ b/ptsd.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PTSD - MindCheck</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>MindCheck</h1>
+    <p>Understanding Post-Traumatic Stress Disorder (PTSD)</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="anxiety.html">Anxiety</a>
+      <a href="depression.html">Depression</a>
+      <a href="bipolar.html">Bipolar</a>
+      <a href="ptsd.html">PTSD</a>
+      <a href="ocd.html">OCD</a>
+    </nav>
+  </header>
+  <div class="container">
+    <h2>What is PTSD?</h2>
+    <p>Post-Traumatic Stress Disorder (PTSD) is a condition triggered by experiencing or witnessing a terrifying event. It can lead to long-lasting mental and emotional effects.</p>
+    <h3>Common Symptoms:</h3>
+    <ul>
+      <li>Flashbacks or nightmares about the event</li>
+      <li>Avoidance of reminders or triggers</li>
+      <li>Hypervigilance and being easily startled</li>
+      <li>Mood changes or feeling detached from others</li>
+    </ul>
+    <h3>What Can Help:</h3>
+    <ul>
+      <li>Trauma-focused therapy (e.g., EMDR, CBT)</li>
+      <li>Support groups and peer support</li>
+      <li>Medication to manage symptoms</li>
+      <li>Mindfulness and grounding techniques</li>
+    </ul>
+  </div>
+</body>
+</html>
