--- a/ptsd.html
+++ b/ptsd.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PTSD - MindCheck</title>
+  <title>PTSD</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>MindCheck</h1>
+    <h1>SmartCare</h1>
     <p>Understanding Post-Traumatic Stress Disorder (PTSD)</p>
     <nav>
       <a href="index.html">Home</a>
