--- a/index.html
+++ b/index.html
@@ -60,6 +60,81 @@
   </div>
 
   <script>
+      // TODO: Replace YOUR_SPACE and YOUR_CHATFLOW_ID with your own values below
+      async function query(data) {
+        const response = await fetch(
+          "https://charlotte-23045030-flowise.hf.space/api/v1/prediction/85c55ab7-c825-487c-b95b-32c4ed97dfd0",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json"
+            },
+            body: JSON.stringify(data)
+          }
+        );
+        const result = await response.json();
+        return result;
+      }
+      function renderMarkdown(md) {
+        // Use marked.js for full markdown support
+        if (window.marked) {
+          return window.marked.parse(md);
+        }
+        // fallback: basic markdown to HTML conversion
+        let html = md
+          .replace(/\*\*(.*?)\*\*/g, '<b>$1</b>') // bold
+          .replace(/\*(.*?)\*/g, '<i>$1</i>') // italics
+          .replace(/`([^`]+)`/g, '<code>$1</code>') // inline code
+          .replace(/\n/g, '<br>'); // line breaks
+        // Table: convert markdown table to HTML table (basic)
+        if (/^\s*\|.*\|/m.test(md)) {
+          html = html.replace(/((?:^\s*\|.*\|\s*\n?)+)/gm, function(table) {
+            const rows = table.trim().split(/\n/).filter(Boolean);
+            if (rows.length < 2) return table; // not a table
+            const header = rows[0].replace(/\|/g, ' ').trim().split(/\s{2,}/);
+            const aligns = rows[1];
+            const bodyRows = rows.slice(2).map(r => r.replace(/\|/g, ' ').trim().split(/\s{2,}/));
+            let htmlTable = '<table class="chat-table"><thead><tr>';
+            header.forEach(h => htmlTable += `<th>${h}</th>`);
+            htmlTable += '</tr></thead><tbody>';
+            bodyRows.forEach(row => {
+              htmlTable += '<tr>';
+              row.forEach(cell => htmlTable += `<td>${cell}</td>`);
+              htmlTable += '</tr>';
+            });
+            htmlTable += '</tbody></table>';
+            return htmlTable;
+          });
+        }
+        return html;
+      }
+      document.addEventListener('DOMContentLoaded', function() {
+        const form = document.getElementById('chat-form');
+        const input = document.getElementById('chat-input');
+        const messages = document.getElementById('chat-messages');
+        const errorDiv = document.getElementById('chat-error');
+        form.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          const userMsg = input.value.trim();
+          if (!userMsg) return;
+          messages.innerHTML += `<div class='chat-msg user'><b>You:</b> ${userMsg}</div>`;
+          input.value = '';
+          errorDiv.textContent = '';
+          try {
+            messages.innerHTML += `<div class='chat-msg bot' style='color:#888;'>BotLah is typing...</div>`;
+            const response = await query({"question": userMsg});
+            let botMsg = response.text || JSON.stringify(response);
+            messages.innerHTML = messages.innerHTML.replace('BotLah is typing...','');
+            messages.innerHTML += `<div class='chat-msg bot'><b>BotLah:</b> ${renderMarkdown(botMsg)}</div>`;
+            messages.scrollTop = messages.scrollHeight;
+          } catch (err) {
+            errorDiv.textContent = 'Sorry, there was a problem contacting BotLah.';
+          }
+        });
+      });
+  </script>
+  
+  <script>
     document.getElementById('mentalHealthForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const form = e.target;
