--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MindCheck - Mental Health Self-Assessment</title>
+  <title>SmartCare - Mental Health Self-Assessment</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
   <header>
-    <h1>MindCheck</h1>
+    <h1>SmartCare</h1>
     <p>Your Mental Health Self-Check Tool</p>
     <nav>
       <a href="index.html">Home</a>
@@ -19,6 +20,7 @@
       <a href="ocd.html">OCD</a>
     </nav>
   </header>
+
   <div class="container">
     <h2>How have you been feeling lately?</h2>
     <form id="mentalHealthForm">
@@ -59,82 +61,19 @@
     </form>
   </div>
 
+  <!-- 🧠 Chatbot Section -->
+  <section id="chatbot-section" style="margin:3rem auto;max-width:600px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
+    <h3 style="margin-bottom:1rem;">💬 Ask MindCheck AI</h3>
+    <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
+    <form id="chat-form" style="display:flex;gap:0.5rem;">
+      <input id="chat-input" type="text" placeholder="Type your question..." style="flex:1;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;" required />
+      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.2rem;font-weight:600;cursor:pointer;">Send</button>
+    </form>
+    <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
+  </section>
+
   <script>
-      // TODO: Replace YOUR_SPACE and YOUR_CHATFLOW_ID with your own values below
-      async function query(data) {
-        const response = await fetch(
-          "https://charlotte-23045030-flowise.hf.space/api/v1/prediction/85c55ab7-c825-487c-b95b-32c4ed97dfd0",
-          {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json"
-            },
-            body: JSON.stringify(data)
-          }
-        );
-        const result = await response.json();
-        return result;
-      }
-      function renderMarkdown(md) {
-        // Use marked.js for full markdown support
-        if (window.marked) {
-          return window.marked.parse(md);
-        }
-        // fallback: basic markdown to HTML conversion
-        let html = md
-          .replace(/\*\*(.*?)\*\*/g, '<b>$1</b>') // bold
-          .replace(/\*(.*?)\*/g, '<i>$1</i>') // italics
-          .replace(/`([^`]+)`/g, '<code>$1</code>') // inline code
-          .replace(/\n/g, '<br>'); // line breaks
-        // Table: convert markdown table to HTML table (basic)
-        if (/^\s*\|.*\|/m.test(md)) {
-          html = html.replace(/((?:^\s*\|.*\|\s*\n?)+)/gm, function(table) {
-            const rows = table.trim().split(/\n/).filter(Boolean);
-            if (rows.length < 2) return table; // not a table
-            const header = rows[0].replace(/\|/g, ' ').trim().split(/\s{2,}/);
-            const aligns = rows[1];
-            const bodyRows = rows.slice(2).map(r => r.replace(/\|/g, ' ').trim().split(/\s{2,}/));
-            let htmlTable = '<table class="chat-table"><thead><tr>';
-            header.forEach(h => htmlTable += `<th>${h}</th>`);
-            htmlTable += '</tr></thead><tbody>';
-            bodyRows.forEach(row => {
-              htmlTable += '<tr>';
-              row.forEach(cell => htmlTable += `<td>${cell}</td>`);
-              htmlTable += '</tr>';
-            });
-            htmlTable += '</tbody></table>';
-            return htmlTable;
-          });
-        }
-        return html;
-      }
-      document.addEventListener('DOMContentLoaded', function() {
-        const form = document.getElementById('chat-form');
-        const input = document.getElementById('chat-input');
-        const messages = document.getElementById('chat-messages');
-        const errorDiv = document.getElementById('chat-error');
-        form.addEventListener('submit', async (e) => {
-          e.preventDefault();
-          const userMsg = input.value.trim();
-          if (!userMsg) return;
-          messages.innerHTML += `<div class='chat-msg user'><b>You:</b> ${userMsg}</div>`;
-          input.value = '';
-          errorDiv.textContent = '';
-          try {
-            messages.innerHTML += `<div class='chat-msg bot' style='color:#888;'>BotLah is typing...</div>`;
-            const response = await query({"question": userMsg});
-            let botMsg = response.text || JSON.stringify(response);
-            messages.innerHTML = messages.innerHTML.replace('BotLah is typing...','');
-            messages.innerHTML += `<div class='chat-msg bot'><b>BotLah:</b> ${renderMarkdown(botMsg)}</div>`;
-            messages.scrollTop = messages.scrollHeight;
-          } catch (err) {
-            errorDiv.textContent = 'Sorry, there was a problem contacting BotLah.';
-          }
-        });
-      });
-  </script>
-  
-  <script>
+    // Mental Health Form Logic
     document.getElementById('mentalHealthForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const form = e.target;
@@ -151,6 +90,51 @@
       } else {
         resultText.textContent = "You're showing signs of distress. Please consider seeking help from a counselor or mental health professional.";
       }
+    });
+
+    // Hugging Face Flowise Chatbot Logic
+    async function query(data) {
+      const response = await fetch(
+        "https://charlotte-23045030-flowise.hf.space/api/v1/prediction/85c55ab7-c825-487c-b95b-32c4ed97dfd0",
+        {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
+        }
+      );
+      const result = await response.json();
+      return result;
+    }
+
+    function renderMarkdown(md) {
+      if (window.marked) return marked.parse(md);
+      return md.replace(/\*\*(.*?)\*\*/g, '<b>$1</b>').replace(/\*(.*?)\*/g, '<i>$1</i>').replace(/\n/g, '<br>');
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+      const form = document.getElementById('chat-form');
+      const input = document.getElementById('chat-input');
+      const messages = document.getElementById('chat-messages');
+      const errorDiv = document.getElementById('chat-error');
+
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const userMsg = input.value.trim();
+        if (!userMsg) return;
+        messages.innerHTML += `<div class='chat-msg user'><b>You:</b> ${userMsg}</div>`;
+        input.value = '';
+        errorDiv.textContent = '';
+        try {
+          messages.innerHTML += `<div class='chat-msg bot' style='color:#999;'>MindCheck AI is typing...</div>`;
+          const response = await query({ "question": userMsg });
+          const botMsg = response.text || "I'm here to help, but I didn't understand that.";
+          messages.innerHTML = messages.innerHTML.replace('MindCheck AI is typing...', '');
+          messages.innerHTML += `<div class='chat-msg bot'><b>MindCheck AI:</b> ${renderMarkdown(botMsg)}</div>`;
+          messages.scrollTop = messages.scrollHeight;
+        } catch (err) {
+          errorDiv.textContent = 'Sorry, something went wrong.';
+        }
+      });
     });
   </script>
 </body>
