--- a/ptsd.html
+++ b/ptsd.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <img src="Images/logo.png" alt="Logo" style="width:60px;height:60px;border-radius:50%;margin-bottom:0.5rem;">
     <h1>SmartCare</h1>
     <p>Understanding Post-Traumatic Stress Disorder (PTSD)</p>
     <nav>
