--- a/ptsd.html
+++ b/ptsd.html
@@ -9,9 +9,13 @@
 </head>
 <body>
   <header>
-    <img src="Images/logo.png" alt="Logo" style="width:60px;height:60px;border-radius:50%;margin-bottom:0.5rem;">
-    <h1>SmartCare</h1>
-    <p>Understanding Post-Traumatic Stress Disorder (PTSD)</p>
+    <div style="display:flex;align-items:center;justify-content:flex-start;gap:1.5rem;max-width:1200px;margin:0 auto;">
+      <img src="Images/logo.png" alt="Logo" style="width:110px;height:110px;border-radius:50%;margin-bottom:0;object-fit:cover;">
+      <div style="flex:1;text-align:left;">
+        <h1>SmartCare</h1>
+        <p>Understanding Post-Traumatic Stress Disorder (PTSD)</p>
+      </div>
+    </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="anxiety.html">Anxiety</a>
