--- a/ptsd.html
+++ b/ptsd.html
@@ -45,16 +45,21 @@
     </ul>
   </div>
 
-  <!-- 💬 Chatbot Section -->
-  <section style="margin:3rem auto;max-width:600px;background:#f3f4f6;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ccc;">
+  <!-- 🧠 Chatbot Section -->
+  <section id="chatbot-section" style="margin:3rem auto;max-width:900px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
     <h3 style="margin-bottom:1rem;">💬 Ask SmartCare AI</h3>
     <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
     <form id="chat-form" style="display:flex;gap:0.5rem;">
-      <input id="chat-input" type="text" placeholder="Type your PTSD question..." style="flex:1;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;" required />
-      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.2rem;font-weight:600;cursor:pointer;">Send</button>
+      <input id="chat-input" type="text" placeholder="Type your question..." style="flex:1;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required />
+      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;">Send</button>
     </form>
     <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
   </section>
+
+  <!-- Back to Top Arrow Button -->
+  <button id="back-to-top" title="Back to top" style="position:fixed;bottom:32px;right:32px;z-index:999;background:#7f5af0;color:#fff;border:none;border-radius:50%;width:48px;height:48px;box-shadow:0 2px 8px #bbb;display:none;align-items:center;justify-content:center;font-size:2rem;cursor:pointer;transition:background 0.2s;">
+    ↑
+  </button>
 
   <script>
     async function query(data) {
@@ -105,6 +110,19 @@
           errorDiv.textContent = 'Sorry, there was a problem contacting SmartCare AI.';
         }
       });
+    });
+    
+    // Back to Top Arrow Logic
+    const backToTopBtn = document.getElementById('back-to-top');
+    window.addEventListener('scroll', function() {
+      if (window.scrollY > 300) {
+        backToTopBtn.style.display = 'flex';
+      } else {
+        backToTopBtn.style.display = 'none';
+      }
+    });
+    backToTopBtn.addEventListener('click', function() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
 </body>
