--- a/ocd.html
+++ b/ocd.html
@@ -1,1 +1,135 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OCD</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+</head>
+<body>
+  <header>
+    <div style="display:flex;align-items:center;justify-content:flex-start;gap:1.5rem;max-width:1200px;margin:0 auto;">
+      <img src="Images/logo.png" alt="Logo" style="width:110px;height:110px;border-radius:50%;margin-bottom:0;object-fit:cover;">
+      <div style="flex:1;text-align:left;">
+        <h1>SmartCare</h1>
+        <p>Understanding Obsessive-Compulsive Disorder (OCD)</p>
+      </div>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="anxiety.html">Anxiety</a>
+      <a href="depression.html">Depression</a>
+      <a href="bipolar.html">Bipolar</a>
+      <a href="ptsd.html">PTSD</a>
+      <a href="ocd.html">OCD</a>
+    </nav>
+  </header>
+
+  <div class="container">
+    <h2>What is OCD?</h2>
+    <p><b>Obsessive-Compulsive Disorder (OCD)</b> is a mental health condition involving unwanted, intrusive thoughts (obsessions) and repetitive behaviors or mental acts (compulsions) that a person feels driven to perform. OCD can affect people of all ages and backgrounds, and symptoms can range from mild to severe.</p>
+    <h3>Common Symptoms</h3>
+    <ul>
+      <li><b>Obsessions:</b> Intrusive, persistent thoughts, images, or urges that cause anxiety (e.g., fear of germs, unwanted aggressive thoughts).</li>
+      <li><b>Compulsions:</b> Repetitive behaviors or rituals (such as checking, cleaning, counting, or arranging) performed to reduce anxiety or prevent a feared event.</li>
+      <li>Difficulty controlling or stopping these thoughts and behaviors, even if recognized as excessive.</li>
+      <li>Significant distress or interference with daily life, work, or relationships.</li>
+    </ul>
+    <h3>What Can Help?</h3>
+    <ul>
+      <li><b>Cognitive Behavioral Therapy (CBT)</b>, especially <b>Exposure and Response Prevention (ERP)</b>, is considered the gold standard for OCD treatment.</li>
+      <li>Medication (such as <b>SSRIs</b>) prescribed by a healthcare professional can help manage symptoms.</li>
+      <li>Support groups, psychoeducation, and connecting with others who understand OCD.</li>
+      <li>Mindfulness, stress management, and self-care techniques.</li>
+      <li>Seeking help early can improve outcomes and quality of life.</li>
+    </ul>
+  </div>
+
+  <!-- 🧠 Chatbot Section -->
+  <section id="chatbot-section" style="margin:3rem auto;max-width:900px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
+    <h3 style="margin-bottom:1rem;">💬 Ask SmartCare AI</h3>
+    <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
+    <form id="chat-form" style="display:flex;gap:0.5rem;flex-wrap:wrap;">
+      <input id="chat-input" type="text" autocomplete="off" placeholder="Type your question about OCD..." style="flex:1;min-width:200px;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required />
+      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;">Send</button>
+    </form>
+    <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
+  </section>
+
+  <!-- Back to Top Arrow Button -->
+  <button id="back-to-top" title="Back to top" style="position:fixed;bottom:32px;right:32px;z-index:999;background:#7f5af0;color:#fff;border:none;border-radius:50%;width:48px;height:48px;box-shadow:0 2px 8px #bbb;display:none;align-items:center;justify-content:center;font-size:2rem;cursor:pointer;transition:background 0.2s;">
+    <span aria-label="Back to top" style="display:inline-block;line-height:1;">↑</span>
+  </button>
+
+  <script>
+    async function query(data) {
+      const response = await fetch(
+        "https://charlotte-23045030-flowise.hf.space/api/v1/prediction/85c55ab7-c825-487c-b95b-32c4ed97dfd0",
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(data)
+        }
+      );
+      const result = await response.json();
+      return result;
+    }
+
+    function renderMarkdown(md) {
+      if (window.marked) return marked.parse(md);
+      return md.replace(/\*\*(.*?)\*\*/g, '<b>$1</b>')
+               .replace(/\*(.*?)\*/g, '<i>$1</i>')
+               .replace(/\n/g, '<br>');
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('chat-form');
+      const input = document.getElementById('chat-input');
+      const messages = document.getElementById('chat-messages');
+      const errorDiv = document.getElementById('chat-error');
+
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const userMsg = input.value.trim();
+        if (!userMsg) return;
+
+        messages.innerHTML += `<div class='chat-msg user'><b>You:</b> ${userMsg}</div>`;
+        input.value = '';
+        errorDiv.textContent = '';
+
+        try {
+          messages.innerHTML += `<div class='chat-msg bot' style='color:#999;'>SmartCare AI is typing...</div>`;
+          const response = await query({ "question": userMsg });
+          const botMsg = response.text || "I'm here to help, but I didn't understand that.";
+          messages.innerHTML = messages.innerHTML.replace('SmartCare AI is typing...', '');
+          messages.innerHTML += `<div class='chat-msg bot'><b>SmartCare AI:</b> ${renderMarkdown(botMsg)}</div>`;
+          messages.scrollTop = messages.scrollHeight;
+        } catch (err) {
+          errorDiv.textContent = 'Sorry, there was a problem contacting SmartCare AI.';
+        }
+      });
+
+      // Accessibility: focus input on page load
+      input.focus();
+    });
+
+    // Back to Top Arrow Logic
+    const backToTopBtn = document.getElementById('back-to-top');
+    window.addEventListener('scroll', function() {
+      if (window.scrollY > 300) {
+        backToTopBtn.style.display = 'flex';
+      } else {
+        backToTopBtn.style.display = 'none';
+      }
+    });
+    backToTopBtn.addEventListener('click', function() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+  </script>
+</body>
+</html>
+
