--- a/ocd.html
+++ b/ocd.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OCD</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="Images/logo.png" type="image/png">
+  <meta name="description" content="Learn about Obsessive-Compulsive Disorder (OCD), its symptoms, and ways to get help. SmartCare provides information and a helpful AI chatbot.">
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
@@ -28,31 +30,34 @@
 
   <div class="container">
     <h2>What is OCD?</h2>
-    <p><b>Obsessive-Compulsive Disorder (OCD)</b> is a mental health condition involving unwanted, intrusive thoughts (obsessions) and repetitive behaviors or mental acts (compulsions) that a person feels driven to perform. OCD can affect people of all ages and backgrounds, and symptoms can range from mild to severe.</p>
+    <p><strong>Obsessive-Compulsive Disorder (OCD)</strong> is a mental health condition involving unwanted, intrusive thoughts (obsessions) and repetitive behaviors or mental acts (compulsions) that a person feels driven to perform. OCD can affect people of all ages and backgrounds, and symptoms can range from mild to severe. Early support and understanding can make a big difference.</p>
     <h3>Common Symptoms</h3>
     <ul>
-      <li><b>Obsessions:</b> Intrusive, persistent thoughts, images, or urges that cause anxiety (e.g., fear of germs, unwanted aggressive thoughts).</li>
-      <li><b>Compulsions:</b> Repetitive behaviors or rituals (such as checking, cleaning, counting, or arranging) performed to reduce anxiety or prevent a feared event.</li>
+      <li><strong>Obsessions:</strong> Intrusive, persistent thoughts, images, or urges that cause anxiety (e.g., fear of germs, unwanted aggressive thoughts).</li>
+      <li><strong>Compulsions:</strong> Repetitive behaviors or rituals (such as checking, cleaning, counting, or arranging) performed to reduce anxiety or prevent a feared event.</li>
       <li>Difficulty controlling or stopping these thoughts and behaviors, even if recognized as excessive.</li>
       <li>Significant distress or interference with daily life, work, or relationships.</li>
     </ul>
-    <h3>What Can Help?</h3>
+    <h3>How to Get Help</h3>
     <ul>
-      <li><b>Cognitive Behavioral Therapy (CBT)</b>, especially <b>Exposure and Response Prevention (ERP)</b>, is considered the gold standard for OCD treatment.</li>
-      <li>Medication (such as <b>SSRIs</b>) prescribed by a healthcare professional can help manage symptoms.</li>
+      <li><strong>Cognitive Behavioral Therapy (CBT)</strong>, especially <strong>Exposure and Response Prevention (ERP)</strong>, is considered the gold standard for OCD treatment.</li>
+      <li>Medication (such as <strong>SSRIs</strong>) prescribed by a healthcare professional can help manage symptoms.</li>
       <li>Support groups, psychoeducation, and connecting with others who understand OCD.</li>
       <li>Mindfulness, stress management, and self-care techniques.</li>
       <li>Seeking help early can improve outcomes and quality of life.</li>
     </ul>
+    <div style="margin-top:1.5rem;background:#eaf6ff;padding:1rem 1.5rem;border-radius:0.7rem;box-shadow:0 1px 6px #d0e6f7;">
+      <strong>Did you know?</strong> OCD is common and treatable. If you or someone you know is struggling, reaching out is a sign of strength.
+    </div>
   </div>
 
   <!-- 🧠 Chatbot Section -->
   <section id="chatbot-section" style="margin:3rem auto;max-width:900px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
     <h3 style="margin-bottom:1rem;">💬 Ask SmartCare AI</h3>
     <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
-    <form id="chat-form" style="display:flex;gap:0.5rem;flex-wrap:wrap;">
-      <input id="chat-input" type="text" autocomplete="off" placeholder="Type your question about OCD..." style="flex:1;min-width:200px;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required />
-      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;">Send</button>
+    <form id="chat-form" style="display:flex;gap:0.5rem;flex-wrap:wrap;" aria-label="Chat with SmartCare AI about OCD">
+      <input id="chat-input" type="text" autocomplete="off" placeholder="Type your question about OCD..." style="flex:1;min-width:200px;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required aria-label="Type your question about OCD" />
+      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;" aria-label="Send your question">Send</button>
     </form>
     <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
   </section>
@@ -63,6 +68,8 @@
   </button>
 
   <script>
+
+    // Query the SmartCare AI chatbot
     async function query(data) {
       const response = await fetch(
         "https://charlotte-23045030-flowise.hf.space/api/v1/prediction/85c55ab7-c825-487c-b95b-32c4ed97dfd0",
@@ -78,12 +85,15 @@
       return result;
     }
 
+
+    // Render markdown safely for chatbot answers
     function renderMarkdown(md) {
       if (window.marked) return marked.parse(md);
       return md.replace(/\*\*(.*?)\*\*/g, '<b>$1</b>')
                .replace(/\*(.*?)\*/g, '<i>$1</i>')
                .replace(/\n/g, '<br>');
     }
+
 
     document.addEventListener('DOMContentLoaded', function () {
       const form = document.getElementById('chat-form');
