with did you know session

--- a/anxiety.html
+++ b/anxiety.html
@@ -79,6 +79,10 @@
       </ul>
     </section>
 
+    <div style="margin-top:1.5rem;background:#eaf6ff;padding:1rem 1.5rem;border-radius:0.7rem;box-shadow:0 1px 6px #d0e6f7;">
+      <strong>Did you know?</strong> Anxiety disorders are the most common mental health condition in the US, affecting over 40 million adults. The good news is that anxiety is highly treatable, and most people with anxiety can learn to manage their symptoms effectively with the right support and tools.
+    </div>
+
     <div style="margin-top:2em;">
       <strong>Take the next step:</strong>
       <ul>
