--- a/ocd.html
+++ b/ocd.html
@@ -52,14 +52,10 @@
   </div>
 
   <!-- 🧠 Chatbot Section -->
+  <!-- 🧠 Chatbot Section (Flowise Embed) -->
   <section id="chatbot-section" style="margin:3rem auto;max-width:900px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
     <h3 style="margin-bottom:1rem;">💬 Ask SmartCare AI</h3>
-    <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
-    <form id="chat-form" style="display:flex;gap:0.5rem;flex-wrap:wrap;" aria-label="Chat with SmartCare AI about OCD">
-      <input id="chat-input" type="text" autocomplete="off" placeholder="Type your question about OCD..." style="flex:1;min-width:200px;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required aria-label="Type your question about OCD" />
-      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;" aria-label="Send your question">Send</button>
-    </form>
-    <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
+    <div id="flowise-chatbot"></div>
   </section>
 
   <!-- Back to Top Arrow Button -->
@@ -67,76 +63,18 @@
     <span aria-label="Back to top" style="display:inline-block;line-height:1;">↑</span>
   </button>
 
-  <script>
-
-    // Query the SmartCare AI chatbot
-    async function query(data) {
-      const response = await fetch(
-        "https://charlotte-23045030-flowise.hf.space/api/v1/prediction/85c55ab7-c825-487c-b95b-32c4ed97dfd0",
-        {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(data)
-        }
-      );
-      const result = await response.json();
-      return result;
-    }
-
-
-    // Render markdown safely for chatbot answers
-    function renderMarkdown(md) {
-      if (window.marked) return marked.parse(md);
-      return md.replace(/\*\*(.*?)\*\*/g, '<b>$1</b>')
-               .replace(/\*(.*?)\*/g, '<i>$1</i>')
-               .replace(/\n/g, '<br>');
-    }
-
-
-    document.addEventListener('DOMContentLoaded', function () {
-      const form = document.getElementById('chat-form');
-      const input = document.getElementById('chat-input');
-      const messages = document.getElementById('chat-messages');
-      const errorDiv = document.getElementById('chat-error');
-
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const userMsg = input.value.trim();
-        if (!userMsg) return;
-
-        messages.innerHTML += `<div class='chat-msg user'><b>You:</b> ${userMsg}</div>`;
-        input.value = '';
-        errorDiv.textContent = '';
-
-        try {
-          messages.innerHTML += `<div class='chat-msg bot' style='color:#999;'>SmartCare AI is typing...</div>`;
-          const response = await query({ "question": userMsg });
-          const botMsg = response.text || "I'm here to help, but I didn't understand that.";
-          messages.innerHTML = messages.innerHTML.replace('SmartCare AI is typing...', '');
-          messages.innerHTML += `<div class='chat-msg bot'><b>SmartCare AI:</b> ${renderMarkdown(botMsg)}</div>`;
-          messages.scrollTop = messages.scrollHeight;
-        } catch (err) {
-          errorDiv.textContent = 'Sorry, there was a problem contacting SmartCare AI.';
-        }
-      });
-
-      // Accessibility: focus input on page load
-      input.focus();
-    });
-
-    // Back to Top Arrow Logic
-    const backToTopBtn = document.getElementById('back-to-top');
-    window.addEventListener('scroll', function() {
-      if (window.scrollY > 300) {
-        backToTopBtn.style.display = 'flex';
-      } else {
-        backToTopBtn.style.display = 'none';
+  <script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
+    Chatbot.init({
+      chatflowid: "ff5707fe-4b25-4dec-9bc6-9b633b71eede",
+      apiHost: "https://rururururururururu-flowise.hf.space",
+      chatWidth: "100%",
+      chatHeight: "420px",
+      container: document.getElementById("flowise-chatbot"),
+      theme: {
+        button: { backgroundColor: "#7f5af0", color: "#fff" },
+        chatWindow: { backgroundColor: "#fff" }
       }
-    });
-    backToTopBtn.addEventListener('click', function() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
 </body>
