--- a/ocd.html
+++ b/ocd.html
@@ -52,10 +52,14 @@
   </div>
 
   <!-- 🧠 Chatbot Section -->
-  <!-- 🧠 Chatbot Section (Flowise Embed) -->
   <section id="chatbot-section" style="margin:3rem auto;max-width:900px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
     <h3 style="margin-bottom:1rem;">💬 Ask SmartCare AI</h3>
-    <div id="flowise-chatbot"></div>
+    <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
+    <form id="chat-form" style="display:flex;gap:0.5rem;flex-wrap:wrap;" aria-label="Chat with SmartCare AI about OCD">
+      <input id="chat-input" type="text" autocomplete="off" placeholder="Type your question about OCD..." style="flex:1;min-width:200px;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required aria-label="Type your question about OCD" />
+      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;" aria-label="Send your question">Send</button>
+    </form>
+    <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
   </section>
 
   <!-- Back to Top Arrow Button -->
@@ -63,18 +67,26 @@
     <span aria-label="Back to top" style="display:inline-block;line-height:1;">↑</span>
   </button>
 
-  <script type="module">
-    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
-    Chatbot.init({
-      chatflowid: "ff5707fe-4b25-4dec-9bc6-9b633b71eede",
-      apiHost: "https://rururururururururu-flowise.hf.space",
-      chatWidth: "100%",
-      chatHeight: "420px",
-      container: document.getElementById("flowise-chatbot"),
-      theme: {
-        button: { backgroundColor: "#7f5af0", color: "#fff" },
-        chatWindow: { backgroundColor: "#fff" }
-      }
+  <script>
+
+    async function query(data) {
+      const response = await fetch(
+        "https://rururururururururu-flowise.hf.space/api/v1/prediction/ff5707fe-4b25-4dec-9bc6-9b633b71eede",
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(data)
+        }
+      );
+      const result = await response.json();
+      return result;
+    }
+
+    // Example usage: logs the response to the console
+    query({"question": "Hey, how are you?"}).then((response) => {
+      console.log(response);
     });
   </script>
 </body>
