--- a/ptsd.html
+++ b/ptsd.html
@@ -72,7 +72,7 @@
   <script>
     async function query(data) {
       const response = await fetch(
-        "https://charlotte-23045030-flowise.hf.space/api/v1/prediction/85c55ab7-c825-487c-b95b-32c4ed97dfd0",
+        "HuggingFace API URL HERE", // Replace with your HuggingFace API URL
         {
           method: "POST",
           headers: {
