--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <a href="bipolar.html">Bipolar</a>
       <a href="ptsd.html">PTSD</a>
       <a href="ocd.html">OCD</a>
+      <a href="membership.html">Membership</a>
     </nav>
   </header>
 
