--- a/bipolar.html
+++ b/bipolar.html
@@ -75,7 +75,7 @@
   <script>
     async function query(data) {
       const response = await fetch(
-        "HuggingFace API URL HERE", // Replace with your HuggingFace API URL
+        "https://AlishbahRP-flowise.hf.space/api/v1/prediction/c5e2d270-ea49-4467-baab-add115016b40", // Replace with your HuggingFace API URL
         {
           method: "POST",
           headers: {
