--- a/anxiety.html
+++ b/anxiety.html
@@ -168,6 +168,10 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
+
+  <footer>
+    <p>&copy; 2025 SmartCare. For education and awareness only – not a medical tool.</p>
+  </footer>
 </body>
 </html>
 
