--- a/bipolar.html
+++ b/bipolar.html
@@ -136,5 +136,9 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
+
+  <footer>
+    <p>&copy; 2025 SmartCare. For education and awareness only – not a medical tool.</p>
+  </footer>
 </body>
 </html>
