--- a/membership.html
+++ b/membership.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SmartCare – Pricing</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SmartCare - Pricing</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
   <header>
-    <div style="display:flex;align-items:center;gap:1.5rem;max-width:1200px;margin:0 auto;">
-      <img src="Images/logo.png" alt="Logo" style="width:110px;height:110px;border-radius:50%;object-fit:cover;">
-      <div>
+    <div style="display:flex;align-items:center;justify-content:flex-start;gap:1.5rem;max-width:1200px;margin:0 auto;">
+      <img src="Images/logo.png" alt="Logo" style="width:110px;height:110px;border-radius:50%;margin-bottom:0;object-fit:cover;">
+      <div style="flex:1;text-align:left;">
         <h1>SmartCare</h1>
         <p>Your Mental Health Self-Check Tool</p>
       </div>
@@ -67,6 +68,87 @@
       </div>
     </div>
   </main>
+
+  <!-- 🧠 Chatbot Section -->
+  <section id="chatbot-section" style="margin:3rem auto;max-width:900px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
+    <h3 style="margin-bottom:1rem;">💬 Ask SmartCare AI</h3>
+    <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
+    <form id="chat-form" style="display:flex;gap:0.5rem;flex-wrap:wrap;" aria-label="Chat with SmartCare AI"">
+      <input id="chat-input" type="text" autocomplete="off" placeholder="Type your question..." style="flex:1;min-width:200px;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required aria-label="Type your question"/>
+      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;" aria-label="Send your question">Send</button>
+    </form>
+    <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
+  </section>
+
+  <!-- Back to Top Arrow Button -->
+  <button id="back-to-top" title="Back to top" style="position:fixed;bottom:32px;right:32px;z-index:999;background:#7f5af0;color:#fff;border:none;border-radius:50%;width:48px;height:48px;box-shadow:0 2px 8px #bbb;display:none;align-items:center;justify-content:center;font-size:2rem;cursor:pointer;transition:background 0.2s;">
+    ↑
+  </button>
+
+  <script>
+    async function query(data) {
+      const response = await fetch(
+        "https://AlishbahRP-flowise.hf.space/api/v1/prediction/c5e2d270-ea49-4467-baab-add115016b40", // Replace with your HuggingFace API URL
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(data)
+        }
+      );
+      const result = await response.json();
+      return result;
+    }
+
+    function renderMarkdown(md) {
+      if (window.marked) return marked.parse(md);
+      return md.replace(/\*\*(.*?)\*\*/g, '<b>$1</b>')
+               .replace(/\*(.*?)\*/g, '<i>$1</i>')
+               .replace(/\n/g, '<br>');
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('chat-form');
+      const input = document.getElementById('chat-input');
+      const messages = document.getElementById('chat-messages');
+      const errorDiv = document.getElementById('chat-error');
+
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const userMsg = input.value.trim();
+        if (!userMsg) return;
+
+        messages.innerHTML += `<div class='chat-msg user'><b>You:</b> ${userMsg}</div>`;
+        input.value = '';
+        errorDiv.textContent = '';
+
+        try {
+          messages.innerHTML += `<div class='chat-msg bot' style='color:#999;'>SmartCare AI is typing...</div>`;
+          const response = await query({ "question": userMsg });
+          const botMsg = response.text || "I'm here to help, but I didn't understand that.";
+          messages.innerHTML = messages.innerHTML.replace('SmartCare AI is typing...', '');
+          messages.innerHTML += `<div class='chat-msg bot'><b>SmartCare AI:</b> ${renderMarkdown(botMsg)}</div>`;
+          messages.scrollTop = messages.scrollHeight;
+        } catch (err) {
+          errorDiv.textContent = 'Sorry, there was a problem contacting SmartCare AI.';
+        }
+      });
+    });
+    
+    // Back to Top Arrow Logic
+    const backToTopBtn = document.getElementById('back-to-top');
+    window.addEventListener('scroll', function() {
+      if (window.scrollY > 300) {
+        backToTopBtn.style.display = 'flex';
+      } else {
+        backToTopBtn.style.display = 'none';
+      }
+    });
+    backToTopBtn.addEventListener('click', function() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+  </script>
 
   <footer>
     <p>&copy; 2025 SmartCare. For education and awareness only – not a medical tool.</p>
