Update page titles for bipolar, OCD, and PTSD sections in SmartCare

--- a/ocd.html
+++ b/ocd.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OCD</title>
+  <title>SmartCare - Understanding OCD</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="Images/logo.png" type="image/png">
   <meta name="description" content="Learn about Obsessive-Compulsive Disorder (OCD), its symptoms, and ways to get help. SmartCare provides information and a helpful AI chatbot.">
