with anxiety ai chat bot

--- a/anxiety.html
+++ b/anxiety.html
@@ -113,7 +113,7 @@
     // Chatbot Logic (copied from index.html)
     async function query(data) {
       const response = await fetch(
-        "https://AlishbahRP-flowise.hf.space/api/v1/prediction/c5e2d270-ea49-4467-baab-add115016b40", // Replace with your HuggingFace API URL
+        "https://jae014-flowise2.hf.space/api/v1/prediction/ddc573b4-600c-4575-9bdd-7cb5ecdce5ff", // Replace with your HuggingFace API URL
         {
           method: "POST",
           headers: { "Content-Type": "application/json" },
