--- a/depression.html
+++ b/depression.html
@@ -57,11 +57,23 @@
       </div>
     </section>
 
+    <section>
+      <h3>More About Depression</h3>
+      <p>
+        Depression is not simply feeling sad or going through a rough patch. It is a complex mental health condition that can affect anyone, regardless of age, gender, or background. It can impact relationships, work, and physical health. Many people with depression may feel isolated or misunderstood, but it is important to remember that help is available and recovery is possible.
+      </p>
+      <ul>
+        <li><strong>Myth:</strong> "Depression is a sign of weakness."<br><em>Fact:</em> Depression is a medical condition, not a character flaw. It can affect anyone and is not a result of personal weakness.</li>
+        <li><strong>Myth:</strong> "You can just 'snap out of it.'"<br><em>Fact:</em> Overcoming depression usually requires support, treatment, and time. It is not something people can simply will away.</li>
+        <li><strong>Tip:</strong> If you or someone you know is struggling, try to reach out to a trusted friend, family member, or mental health professional. Small steps, like maintaining a routine, getting enough sleep, and spending time outdoors, can also help.</li>
+      </ul>
+    </section>
+
     <section style="margin: 2em 0;">
       <h3>Watch: Overcoming Depression</h3>
     
       <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;">
-        <iframe src="https://www.youtube.com/embed/rqjC8b2uosE" title="Overcoming Depression" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+        <iframe src="https://www.youtube.com/embed/Izy1TgMe-tI" title="Overcoming Depression" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
       </div>
       <p style="margin-top:0.5em;font-size:0.98em;color:#444;">Above: Two helpful videos about overcoming and understanding depression. The first is a personal story, the second explains symptoms and treatment options.</p>
     </section>
